@@ -72,9 +72,6 @@ trademarks or registered trademarks of Sun Microsystems, Inc.
 
 // Data
 
-// The ACE_Process_Options default size of 1024 is sometimes not enough.
-const unsigned long TAO_IDL_COMMAND_LINE_BUFFER_SIZE = 4 * 1024;
-
 extern const char *DRV_files[];
 // All files to be processed.
 
